--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="https://unpkg.com/datepickerdate@0.0.1/dist/d3.min.js" />
+    <script src="https://unpkg.com/browse/preact@10.0.0-rc.3/dist/preact.umd.js"></script>
+    <script src="https://unpkg.com/datepickerdate@0.0.1/lib/index.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/datepickerdate@0.0.1/lib/index.css"
+    />
+    <script>
+      const { h, Component, render } = "preact";
+    </script>
     <title>Document</title>
   </head>
-  <body>
-    <h1>datepicker111</h1>
-  </body>
+  <body></body>
 </html>
