--- a/index.html
+++ b/index.html
@@ -4,16 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="https://unpkg.com/browse/preact@10.0.0-rc.3/dist/preact.umd.js"></script>
-    <script src="https://unpkg.com/datepickerdate@0.0.1/lib/index.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/datepickerdate@0.0.1/lib/index.css"
-    />
-    <script>
-      const { h, Component, render } = "preact";
-    </script>
+    <link rel="stylesheet" href="src/app.min.css" />
+    <style>
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial,
+          sans-serif;
+        font-size: 1.1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.4;
+        color: #151b26;
+        text-rendering: optimizeLegibility;
+        box-sizing: border-box;
+        background-color: #fff1e8;
+      }
+
+      input {
+        width: 100%;
+        padding: 10px;
+        font-weight: 400;
+        font-style: normal;
+        border-radius: 5px;
+        border: 2px solid #e0e0e0;
+        background-color: #fff;
+        box-shadow: none;
+        -webkit-appearance: none;
+      }
+
+      input:focus {
+        border: 2px solid blue;
+      }
+
+      blockquote,
+      dd,
+      dl,
+      fieldset,
+      figure,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      hr,
+      legend,
+      p,
+      pre,
+      button,
+      body,
+      ul {
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
+        list-style: none;
+      }
+
+      img {
+        max-width: 100%;
+      }
+
+      button,
+      input,
+      select,
+      textarea {
+        color: inherit;
+        font: inherit;
+      }
+    </style>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+    <script src="https://unpkg.com/preact@8.5.2/dist/preact.umd.js"></script>
+    <!-- <script src="https://unpkg.com/datepickerdate@0.0.2/lib/index.js"></script> -->
+    <script src="src/app.min.js"></script>
+  </body>
 </html>
