--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="src/app.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/datepickerdate@1.0.12/lib/index.css"
+    />
     <style>
       *,
       *::before,
@@ -138,6 +141,6 @@ color: #b78181"
       ></em>
     </main>
     <script src="https://unpkg.com/preact@8.5.2/dist/preact.umd.js"></script>
-    <script src="src/app.min.js"></script>
+    <script src="src/demo/app.min.js"></script>
   </body>
 </html>
