--- a/index.html
+++ b/index.html
@@ -111,31 +111,14 @@
   </head>
   <body>
     <main style="padding: 2rem; max-width: 30em; margin: 0 auto">
-      <h1 style="margin-bottom: 2rem; font-size: 67px">Datepicker 📆</h1>
-      <ul>
-        <li>🦢 A <strong>Preact</strong>-based datepicking component.</li>
-        <li>
-          🦩 <strong>Lightweight</strong> (<a
-            href="https://bundlephobia.com/result?p=datepickerdate@1.0.1"
-            >2.9kB</a
-          >
-          minified+gzipped).
-        </li>
-        <li>🦆 No-frills- Just gives you <strong>ISO8601</strong> date.</li>
-        <li>
-          🦅 If desired, skip the optional CSS file and style yourself while,
-          you know, still get the dates. 😱
-        </li>
-      </ul>
       <div
-        style="padding: 25px;
-        margin-top: 2rem;
-background: #b7818142;
-border-radius: 8px;"
+        style="max-width: 17rem;
+margin: 0 auto;"
         id="root"
       ></div>
       <em
-        style="margin-top: 1rem; display: block;
+        style="max-width: 17rem;
+margin: 0 auto; margin-top: 1rem; display: block;
 color: #b78181"
         id="output"
       ></em>
