--- a/index.html
+++ b/index.html
@@ -106,11 +106,61 @@
       strong {
         font-weight: 600;
       }
+
+      .switch {
+        position: relative;
+        display: inline-block;
+        width: 40px;
+        height: 20px;
+        background-color: rgba(0, 0, 0, 0.25);
+        border-radius: 20px;
+        transition: all 0.3s;
+      }
+
+      .switch::after {
+        content: "";
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        border-radius: 18px;
+        background-color: white;
+        top: 1px;
+        left: 1px;
+        transition: all 0.3s;
+      }
+
+      input[type="checkbox"]:checked + .switch::after {
+        transform: translateX(20px);
+      }
+
+      input[type="checkbox"]:checked + .switch {
+        background-color: #7983ff;
+      }
+
+      .offscreen {
+        position: absolute;
+        left: -9999px;
+      }
     </style>
+    <script>
+      function toggleCss() {
+        document
+          .getElementById("root")
+          .firstElementChild.classList.toggle("dpd");
+      }
+    </script>
     <title>Document</title>
   </head>
   <body>
     <main style="padding: 2rem; max-width: 30em; margin: 0 auto">
+      <p style="color: #b78181">on/off css</p>
+      <input
+        onInput="toggleCss()"
+        type="checkbox"
+        id="toggle"
+        class="offscreen"
+      />
+      <label for="toggle" class="switch"></label>
       <div
         style="max-width: 17rem;
 margin: 0 auto;"
