--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/datepickerdate@1.0.12/lib/index.css"
-    />
+    <link rel="stylesheet" href="src/demo/app.min.css" />
     <style>
       *,
       *::before,
@@ -52,7 +49,6 @@
         width: 100%;
         height: 2.5rem;
         padding: 0 18px;
-        border-radius: 5px;
         border: 0;
         text-transform: capitalize;
         color: black;
